视频页面构建，部分功能构建

--- a/app/src/main/res/layout/item_index_vp.xml
+++ b/app/src/main/res/layout/item_index_vp.xml
@@ -2,11 +2,9 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <com.bigkoo.convenientbanner.ConvenientBanner
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/convenientBanner"
+    <com.youth.banner.Banner
+        android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="@dimen/x400"
-        app:canLoop="true"
     />
 </android.support.constraint.ConstraintLayout>
