--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,9 +16,8 @@
     <!--BottomBar-->
     <color name="tab_index_bg">#f7aeff</color>
     <color name="tab_news_bg">#b9aeff</color>
-    <color name="tab_img_bg">#EEE685</color>
-    <color name="tab_videos_bg">#b2b2b2</color>
-    <color name="seatch_view_bg">#e5feff</color>
+    <color name="tab_img_bg">#b2e7a1</color>
+    <color name="tab_videos_bg">#a1d1ff</color>
     <!--Video-->
     <color name="item_video_bg">#eff4ff</color>
 </resources>
