--- a/app/src/main/res/drawable/bg_search_shap.xml
+++ b/app/src/main/res/drawable/bg_search_shap.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="15dp" />
-    <solid android:color="@color/seatch_view_bg" />
+    <solid android:color="@color/white" />
 
 </shape>
