--- a/app/src/main/res/layout/dialog_img.xml
+++ b/app/src/main/res/layout/dialog_img.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_dialogf"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    >
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:gravity="center">
     <ImageView
         android:id="@+id/iv_pic"
         android:layout_width="@dimen/x600"
         android:layout_height="@dimen/x850" />
+
 </LinearLayout>
